[package]
name = "ritcher"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.42.0", features = ["full"] }
m3u8-rs = "6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.13", features = ["json"] }