[package]
name = "ritcher"
version = "0.1.0"
edition = "2024"

[features]
default = []
valkey = ["redis"]

[dependencies]
axum = "0.8.6"
tokio = { version = "1.42.0", features = ["full"] }
m3u8-rs = "6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.13", features = ["json"] }
thiserror = "2.0"
dashmap = "6.1"
tower-http = { version = "0.6", features = ["cors"] }
quick-xml = "0.37"
dash-mpd = { version = "0.17", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
chrono = "0.4"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "manifest_pipeline"
harness = false

[[bench]]
name = "vast_parsing"
harness = false
